@@ -42,6 +42,7 @@ Copyright_License {
 #include "VarioBarLook.hpp"
 #include "IconLook.hpp"
 #include "ThermalAssistantLook.hpp"
+#include "NextArrowLook.hpp"
 
 struct UISettings;
 class Font;
@@ -63,6 +64,7 @@ struct Look {
   FlarmTrafficLook flarm_dialog;
   InfoBoxLook info_box;
   WindArrowLook wind_arrow_info_box;
+  NextArrowLook next_arrow_info_box;
   FinalGlideBarLook final_glide_bar;
   VarioBarLook vario_bar;
   IconLook icon;
